Make sure even .headline elements with .center are left-aligned on portrait
Closes #13

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -79,6 +79,9 @@ h5
     width: auto
     left: 50vw
     transform: translate(-50%, -50%)
+    
+    &.center
+      text-align: left
 
   opacity: 0
   transition: 1.5s opacity
